--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,17 @@ name: CI
 
 on:
   push:
+    branches: [ "master" ]
   pull_request:
+    branches: [ "master" ]
+
+permissions:
+  contents: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -16,17 +22,7 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Instalar dependencias
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e .
-
-      - name: Chequeo básico de sintaxis (compileall)
-        run: |
-          python - <<'PY'
-          import compileall, sys
-          ok = compileall.compile_dir('.', force=True, quiet=1)
-          sys.exit(0 if ok else 1)
-          PY
-
-
