--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
 ]
 
@@ -24,4 +24,4 @@ dependencies = [
 ]
 
 [tool.setuptools]
-py_modules = ["main", "lyrics_finder"]
+py-modules = ["main", "lyrics_finder"]
